--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "server-start",
+    "name": "express-server",
     "version": "1.0.0",
     "description": "",
     "main": "src/boot.js",
